--- a/static/styles.css
+++ b/static/styles.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
+/* @font-face {
   font-family: "Recoleta";
   src: url("/fonts/Recoleta-Medium.woff2") format("woff2");
   font-weight: 500;
@@ -32,7 +32,7 @@
   font-weight: bold;
   font-style: normal;
   font-display: swap;
-}
+} */
 
 @font-face {
   font-family: Fixel;
